--- a/azure-pipelines.yaml
+++ b/azure-pipelines.yaml
@@ -83,17 +83,17 @@ stages:
          vmImage: 'Ubuntu-20.04'
       steps:
       - task: ArchiveFiles@2
-        displayName: Archive FakeRestAPI
+        displayName: Archive DumRestAPI
         inputs:
-          rootFolderOrFile: '$(System.DefaultWorkingDirectory)/fakerestapi'
+          rootFolderOrFile: '$(System.DefaultWorkingDirectory)/dumrestapi'
           includeRootFolder: false
           archiveType: 'zip'
-          archiveFile: '$(Build.BuildId)-fakerestapi.zip'
+          archiveFile: '$(Build.BuildId)-dumrestapi.zip'
       - task: PublishPipelineArtifact@1
         displayName: Upload package
         inputs:   
-          targetPath: $(Build.BuildId)-fakerestapi.zip
-          artifact: drop-fakerestapi
+          targetPath: $(Build.BuildId)-dumrestapi.zip
+          artifact: drop-dumrestapi
 
       - task: ArchiveFiles@2
         displayName: Archive Selenium
@@ -112,7 +112,7 @@ stages:
   - stage: DeployApp
     displayName: Deploy App to Custom VM
     jobs:
-    - deployment: FakeRestAPI
+    - deployment: DumRestAPI
       pool:
         vmImage: 'Ubuntu-20.04'
       environment: 'VM-TEST'
@@ -126,7 +126,7 @@ stages:
                 azureSubscription: 'd9ddb995-7287-44fa-8456-7bb86d5dfaed'
                 appName: 'huent15-project03-app-AppService'
                 appType: webApp
-                package: $(Pipeline.Workspace)/drop-fakerestapi/$(Build.BuildId)-fakerestapi.zip
+                package: $(Pipeline.Workspace)/drop-dumrestapi/$(Build.BuildId)-dumrestapi.zip
                 deploymentMethod: auto          
 
     - deployment: VMDeploy
