--- a/azure-pipelines.yaml
+++ b/azure-pipelines.yaml
@@ -44,7 +44,7 @@ stages:
           provider: 'azurerm'
           command: 'init'
           workingDirectory: '$(System.DefaultWorkingDirectory)/terraform/environments/test'
-          backendServiceArm: 'd9ddb995-7287-44fa-8456-7bb86d5dfaed'
+          backendServiceArm: 'fbaeb2de-9f71-4f5a-a8af-b436f37ebbc6'
           backendAzureRmResourceGroupName: 'Azuredevops'
           backendAzureRmStorageAccountName: 'huent15'
           backendAzureRmContainerName: 'huent15'
@@ -56,7 +56,7 @@ stages:
           provider: 'azurerm'
           command: 'validate'
           workingDirectory: '$(System.DefaultWorkingDirectory)/terraform/environments/test'
-          backendServiceArm: 'd9ddb995-7287-44fa-8456-7bb86d5dfaed'
+          backendServiceArm: 'fbaeb2de-9f71-4f5a-a8af-b436f37ebbc6'
        
       - task: TerraformCLI@0
         displayName: Terraform Plan
@@ -64,7 +64,7 @@ stages:
           provider: 'azurerm'
           command: 'plan'
           workingDirectory: '$(System.DefaultWorkingDirectory)/terraform/environments/test'
-          environmentServiceNameAzureRM: 'd9ddb995-7287-44fa-8456-7bb86d5dfaed'
+          environmentServiceNameAzureRM: 'fbaeb2de-9f71-4f5a-a8af-b436f37ebbc6'
           
       - task: TerraformCLI@0
         displayName: Terraform Apply
@@ -74,7 +74,7 @@ stages:
           commandOptions: |
             -auto-approve
           workingDirectory: '$(System.DefaultWorkingDirectory)/terraform/environments/test'
-          environmentServiceNameAzureRM: 'd9ddb995-7287-44fa-8456-7bb86d5dfaed'
+          environmentServiceNameAzureRM: 'fbaeb2de-9f71-4f5a-a8af-b436f37ebbc6'
 
 
   - stage: Build
@@ -118,7 +118,7 @@ stages:
       pool:
         vmImage: 'Ubuntu-20.04'
         name: huent15
-      environment: 'VM-TEST'
+      environment: 'VM-ENV'
       strategy:
         runOnce:
           deploy:
@@ -126,7 +126,7 @@ stages:
             - task: AzureWebApp@1
               displayName: 'Deploy Azure Web App'
               inputs:
-                azureSubscription: 'd9ddb995-7287-44fa-8456-7bb86d5dfaed'
+                azureSubscription: 'fbaeb2de-9f71-4f5a-a8af-b436f37ebbc6'
                 appName: 'huent15-project03-app-AppService'
                 appType: webApp
                 package: $(Pipeline.Workspace)/drop-fakerestapi/$(Build.BuildId)-fakerestapi.zip
@@ -135,7 +135,7 @@ stages:
     - deployment: VMDeploy
       displayName: VMDeploy
       environment:
-        name:  'VM-TEST'
+        name:  'VM-ENV'
         resourceType: VirtualMachine
       strategy:
         runOnce:
@@ -167,7 +167,7 @@ stages:
       - deployment: test_on_vm
         displayName: UI testing
         environment:
-         name: 'VM-TEST'
+         name: 'VM-ENV'
          resourceType: VirtualMachine
         strategy:
           runOnce:
