--- a/azure-pipelines.yaml
+++ b/azure-pipelines.yaml
@@ -87,7 +87,7 @@ stages:
       - task: ArchiveFiles@2
         displayName: Archive FakeRestAPI
         inputs:
-          rootFolderOrFile: '$(System.DefaultWorkingDirectory)/fakerestapi'
+          rootFolderOrFile: '$(System.DefaultWorkingDirectory)/automatedtesting/fakerestapi'
           includeRootFolder: false
           archiveType: 'zip'
           archiveFile: '$(Build.BuildId)-fakerestapi.zip'
