--- a/azure-pipelines.yaml
+++ b/azure-pipelines.yaml
@@ -62,7 +62,7 @@ stages:
         displayName: Terraform Plan
         inputs:
           provider: 'azurerm'
-          command: 'plan'
+          command: 'plan -lock=false'
           workingDirectory: '$(System.DefaultWorkingDirectory)/terraform/environments/test'
           environmentServiceNameAzureRM: 'fbaeb2de-9f71-4f5a-a8af-b436f37ebbc6'
           
@@ -70,7 +70,7 @@ stages:
         displayName: Terraform Apply
         inputs:
           provider: 'azurerm'
-          command: 'apply'
+          command: 'apply -lock=false'
           commandOptions: |
             -auto-approve
           workingDirectory: '$(System.DefaultWorkingDirectory)/terraform/environments/test'
