--- a/azure-pipelines.yaml
+++ b/azure-pipelines.yaml
@@ -256,8 +256,9 @@ stages:
             inputs:
               versionSpec: '14.x'
           - bash: |
-              sudo apt install nodejs
+              sudo apt install nodejs -y
               node -v
+              sudo apt install npm -y
               sudo npm install -g newman
               mkdir -p log/newman
               newman -v
