--- a/azure-pipelines.yaml
+++ b/azure-pipelines.yaml
@@ -257,6 +257,7 @@ stages:
               versionSpec: '14.x'
           - bash: |
               node -v
+              sudo apt install npm -y
               sudo npm install -g newman
               mkdir -p log/newman
               newman -v
